--- a/front-end/src/styles/Home.css
+++ b/front-end/src/styles/Home.css
@@ -23,6 +23,8 @@ body, .container {
   display: flex;
   align-items: center;
   color: black;
+  display: flex;
+  flex-direction: row;
 }
 
 .intro h2 {
@@ -32,18 +34,27 @@ body, .container {
 .intro .left {
   padding: 20px;
   border-radius: 10px;
-  margin-right: 20%;
-  width: 40%;
   min-height: 100%;
   height: 240px;
+  /* border: 2px solid red; */
 }
 
 .intro .right {
-  width: 40%;
   padding: 20px;
   border-radius: 10px;
-  height: 240px;
   min-height: 100%;
+  height: 240px;
+  /* border: 2px solid red; */
+}
+
+.intro .left,
+.intro .right {
+  padding: 20px;
+  border-radius: 10px;
+  min-height: 100%;
+  height: 240px;
+  /* border: 2px solid red; */
+  flex: 1; /* This makes both divs take up equal space */
 }
 
 .intro h1 {
@@ -169,9 +180,9 @@ body, .container {
   justify-content: space-between;
   align-items: center;
   background-color: #f9f9f9;
-  /* word-wrap: break-word; /* Break long words or URLs */
-  /* word-break: break-word; /* Ensure longer words break properly */
-  /* overflow-wrap: break-word; /* Add fallback for older browsers */
+  /* word-wrap: break-word; Break long words or URLs */
+  /* word-break: break-word; Ensure longer words break properly */
+  /* overflow-wrap: break-word; Add fallback for older browsers */
 }
 
 .hour-card b, .hour-card p:first-child {
