--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,10 +1,8 @@
-/* Header.css */
-
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #003366; /* Adjust as needed */
+  background-color: #003366; 
 }
 
 .nav-left {
@@ -14,8 +12,8 @@
 }
 
 .nav-left img {
-  height: 75px; /* Adjust the height of the logo */
-  width: auto; /* Maintain aspect ratio */
+  height: 75px; 
+  width: auto; 
 }
 
 .nav-right ul {
@@ -23,30 +21,28 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  align-items: center; /* Ensure all items in the list are vertically centered */
+  align-items: center; 
 }
 
 .nav-right li {
-  margin-left: 20px; /* Space between items */
-  display: flex; /* Use flexbox to align icon and text */
-  align-items: center; /* Vertically center icon and text */
+  margin-left: 20px; 
+  display: flex; 
+  align-items: center; 
 }
 
 .nav-right li svg {
-  margin-right: 8px; /* Add some spacing between icon and text */
-  font-size: 1.2rem; /* Adjust icon size to match text height */
+  margin-right: 8px; 
+  font-size: 1.2rem; 
 }
 
 .nav-right a {
-  color: white; /* Adjust as needed */
+  color: white; 
   text-decoration: none;
-  font-size: 16px; /* Adjust text size */
-  display: inline-block; /* Ensure the text is treated as a block */
+  font-size: 16px; 
+  display: inline-block; 
 }
 
-/* Media Queries for Mobile */
 @media (max-width: 768px) {
-  /* Adjust navbar layout for smaller screens */
   .navbar {
       flex-direction: column;
       justify-content: center;
@@ -54,28 +50,26 @@
       padding: 10px 0;
   }
 
-  /* Adjust logo size for mobile */
   .nav-left img {
-      height: 50px; /* Reduce logo size on mobile */
+      height: 50px; 
   }
 
-  /* Stack nav items vertically */
   .nav-right ul {
-      flex-direction: column; /* Stack items vertically */
-      align-items: flex-start; /* Align items to the left */
-      margin-top: 15px; /* Add some spacing between logo and nav items */
+      flex-direction: column; 
+      align-items: flex-start; 
+      margin-top: 15px; 
   }
 
   .nav-right li {
-      margin-left: 0; /* Remove margin between items */
-      margin-bottom: 10px; /* Add spacing between items */
+      margin-left: 0; 
+      margin-bottom: 10px; 
   }
 
   .nav-right a {
-      font-size: 14px; /* Reduce text size on mobile */
+      font-size: 14px; 
   }
 
   .nav-right li svg {
-      font-size: 1rem; /* Adjust icon size on mobile */
+      font-size: 1rem; 
   }
 }
