--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,4 +1,3 @@
-/* Home Page Container */
 .home-container {
   max-width: 1200px;
   margin: 20px auto;
@@ -6,19 +5,16 @@
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
-  /* text-align: center; */
 }
 
 body, .container {
-  overflow-x: hidden; /* Prevent horizontal scrolling */
+  overflow-x: hidden; 
 }
 
 .spacer {
   padding: 10px;
 }
 
-/* Introduction Section */
 .intro {
   text-align: center;
   margin-bottom: 40px;
@@ -40,8 +36,6 @@ body, .container {
   min-height: 100%;
   height: 240px;
   padding-right: 24px;
-
-  /* border: 2px solid red; */
 }
 
 .intro .right {
@@ -50,8 +44,6 @@ body, .container {
   min-height: 100%;
   height: 240px;
   padding-right: 24px;
-
-  /* border: 2px solid red; */
 }
 
 .intro .left,
@@ -60,8 +52,7 @@ body, .container {
   border-radius: 10px;
   min-height: 100%;
   height: 240px;
-  /* border: 2px solid red; */
-  flex: 1; /* This makes both divs take up equal space */
+  flex: 1; 
 }
 
 .intro h1 {
@@ -76,7 +67,6 @@ body, .container {
   line-height: 1.5;
 }
 
-/* Gallery Section */
 .gallery {
   margin-bottom: 40px;
 }
@@ -127,7 +117,6 @@ body, .container {
   bottom: 0;
 }
 
-/* Services Overview Section */
 .services-overview {
   text-align: center;
   display: flex;
@@ -187,9 +176,6 @@ body, .container {
   justify-content: space-between;
   align-items: center;
   background-color: #f5f5f5;
-  /* word-wrap: break-word; Break long words or URLs */
-  /* word-break: break-word; Ensure longer words break properly */
-  /* overflow-wrap: break-word; Add fallback for older browsers */
 }
 
 .hour-card b, .hour-card p:first-child {
@@ -218,14 +204,11 @@ body, .container {
   margin-left: 30px;
 }
 
-/* Media Queries for Mobile */
 @media (max-width: 768px) {
-  /* Home Page Container */
   .home-container {
       padding: 0 10px;
   }
-
-  /* Introduction Section */
+  
   .intro {
       flex-direction: column;
       align-items: flex-start;
@@ -248,22 +231,20 @@ body, .container {
       font-size: 1rem;
   }
 
-  /* Gallery Section */
   .image-grid {
-      grid-template-columns: 1fr 1fr; /* Two columns on mobile */
+      grid-template-columns: 1fr 1fr; 
       gap: 10px;
   }
 
   .image-placeholder {
-      height: 250px; /* Adjust height for smaller screens */
+      height: 250px; 
   }
 
   .image-caption {
       font-size: 0.8rem;
       padding: 5px;
   }
-
-  /* Services Overview Section */
+  
   .services-overview {
       flex-direction: column;
       align-items: flex-start;
@@ -280,15 +261,14 @@ body, .container {
   }
 
   .service-card {
-      width: 80%; /* Increase card width on mobile */
+      width: 80%; 
       margin-bottom: 15px;
   }
 
   .hours {
       padding: 10px;
   }
-
-  /* Get in touch section */
+  
   .get-in-touch {
       padding: 0 10px;
   }
@@ -298,7 +278,7 @@ body, .container {
   }
 
   .hour-card {
-    font-size: 14px; /* Reduce font size if needed */
+    font-size: 14px; 
     word-wrap: break-word;
-}
+  }
 }
